in progress push for dto creations and swagger annotations. removing collections dtos for now
